syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "/.";

package api;

service Metis {
    rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse);
    rpc ListProjects (ListProjectsRequest) returns (ListProjectsResponse);
    rpc UpdateProject (UpdateProjectRequest) returns (UpdateProjectResponse);
    rpc DeleteProject (DeleteProjectRequest) returns (DeleteProjectResponse);
}

message CreateProjectRequest {
    string project_name = 1;
    string template_id = 2;
}

message CreateProjectResponse {
    Project project = 1;
}

message UpdateProjectRequest {
    string project_id = 1;
    string project_name = 2;
}

message UpdateProjectResponse {
}

message DeleteProjectRequest {
    string project_id = 1;
}

message DeleteProjectResponse {
}

message ListProjectsRequest {

}

message ListProjectsResponse {
    repeated Project projects = 1;
}

message Project {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
}
